FIxed bdsm spacings

--- a/scheme/public/module/customizedrwd/_modules/banners/three/three.scss
+++ b/scheme/public/module/customizedrwd/_modules/banners/three/three.scss
@@ -297,7 +297,7 @@
 
   .bdsm-section-bg-container {
     width: auto;
-    height: 1200px;
+    height: 1060px;
 
     .bdsm-section-bg-img {
       width: 100%;
@@ -380,7 +380,6 @@
       .bdsm-products-slider-container {
         position: relative;
         left: -50%;
-        padding-top: 50px;
 
         .bdsm-products-slider {
           display: flex;
@@ -391,7 +390,7 @@
   }
 
   .bdsm-section-bg-container-higher {
-    height: 1440px;
+    height: 1380px;
   }
 }
 
